--- a/src/components/charInfo/charInfo.scss
+++ b/src/components/charInfo/charInfo.scss
@@ -7,6 +7,8 @@
         position: relative;
         z-index: 5;
         background-color: #fff;
+        border-radius: 5px;
+
         &-name {
             font-weight: bold;
             font-size: 22px;
@@ -22,6 +24,7 @@
         grid-template-columns: 150px auto;
         column-gap: 25px;
         img {
+            border-radius: 5px;
             width: 150px;
             height: 150px;
             object-fit: cover;
@@ -53,6 +56,7 @@
             line-height: 25px;
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             margin-top: 10px;
+            border-radius: 5px;
         }
     }
     &__select {
