--- a/src/components/charList/charList.scss
+++ b/src/components/charList/charList.scss
@@ -15,6 +15,7 @@
         row-gap: 30px;
     }
     &__item {
+        border-radius: 5px;
         width: 200px;
         height: 318px;
         background-color: $dark;
@@ -23,6 +24,7 @@
         cursor: pointer;
         transition: 0.3s transform;
         img {
+            border-radius: 5px;
             width: 200px;
             height: 200px;
             object-fit: cover;
@@ -31,6 +33,7 @@
         &_selected {
             box-shadow: 0 5px 20px $main-color;
             transform: translateY(-8px);
+            border-radius: 5px;
         }
     }
     &__name {
