--- a/src/components/randomChar/randomChar.scss
+++ b/src/components/randomChar/randomChar.scss
@@ -4,6 +4,8 @@
     display: grid;
     grid-template-columns: repeat(2, 50%);
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.25);
+    align-items: center;
+    border-radius: 5px;
     &__block {
         padding: 40px 35px;
         display: grid;
@@ -11,6 +13,7 @@
         column-gap: 30px;
     }
     &__img {
+        border-radius: 5px;
         width: 180px;
         height: 180px;
         object-fit: cover;
@@ -40,6 +43,7 @@
         padding: 40px 35px;
         background-color: $dark;
         position: relative;
+        border-radius: 5px;
         button {
             margin-top: 13px;
         }
